--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
-            Coolio
+            <img src="assets/img/logo.svg" alt="">
           </a>
         </div>
       </div>
     </nav>
     <h1>Hello, worlds!</h1>
-
+    <p>HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries</p>
     <script src="assets/js/scripts.min.js"></script>
   </body>
 </html>
