add story function

--- a/dev/index.html
+++ b/dev/index.html
@@ -42,6 +42,7 @@
                               <h3 class="panel-title text-center">
                                 {{ listName == 'InProgress' ? 'In Progress' : listName}}
                               </h3>
+                              <a href="#" class="add-story" ng-click="addItem(listName)">Add Story</a>
                           </div>
                           <div class="panel-body">
                             <!-- The dnd-list directive allows to drop elements into it.
