--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                               <h3 class="panel-title text-center">
                                 {{ listName == 'InProgress' ? 'In Progress' : listName}}
                               </h3>
-                              <a href="#" class="add-story" ng-click="addItem(listName)">Add Story</a>
+                              <a href="#" class="add-story" ng-click="addItem(listName)" title="Add Story">Add Story</a>
                           </div>
                           <div class="panel-body">
                             <!-- The dnd-list directive allows to drop elements into it.
@@ -59,7 +59,11 @@
                                     dnd-selected="models.selected = item"
                                     ng-class="{'selected': models.selected === item}"
                                     >
-                                    {{item.label}}
+                                    <span>{{item.label}}</span>
+                                    <ul class="actions">
+                                      <li><a href="#" title="Change Background Color"><i class="material-icons">format_color_fill</i></a></li>
+                                      <li><a href="#" title="Delete"><i class="material-icons">clear</i></a></li>
+                                    </ul>
                                 </li>
                             </ul>
                           </div>
