--- a/dev/index.html
+++ b/dev/index.html
@@ -56,7 +56,7 @@
                                     <span>{{item.label}}</span>
                                     <ul class="actions">
                                       <li><a href="#" title="Change Background Color"><i class="material-icons">format_color_fill</i></a></li>
-                                      <li><a href="#" title="Delete"><i class="material-icons">clear</i></a></li>
+                                      <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label)"><i class="material-icons">clear</i></a></li>
                                     </ul>
                                 </li>
                             </ul>
