bowerjson, footer trash

--- a/src/index-old.html
+++ b/src/index-old.html
@@ -8,8 +8,8 @@
     
     <title>Coolio</title>
     
-    <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300|Raleway:400,300,500,600,700' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,700,300|Raleway:400,300,500,600,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
     <link href="assets/css/app.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
