updated trash ui and readme

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,9 @@
 
         </div>
       </div>
-
+      <div id="trash-box">
+        <h1>this is the trash box</h1>
+      </div>
       <footer class="footer">
         <div class="container-fluid">
           <h3>Recycle Bin</h3>
