--- a/dev/index.html
+++ b/dev/index.html
@@ -62,13 +62,20 @@
                                        dragged away, you have to remove it from the original list
                                        yourself using the dnd-moved attribute -->
                                   <li class="card" ng-repeat="item in list" dnd-draggable="item" dnd-moved="list.splice($index, 1)" dnd-effect-allowed="move" dnd-selected="models.selected = item" ng-class="{'selected': models.selected === item}">
-                                      <span>{{item.label}}</span>
-                                      <ul class="actions">
-                                        <!-- <li><a href="#" title="Change Background Color"><i class="material-icons">format_color_fill</i></a></li>
-                                        <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label)"><i class="material-icons">clear</i></a></li> -->
-                                        <li><a href="#" title="Change Background Color"><i class="material-icons">f</i></a></li>
-                                        <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label)"><i class="material-icons">x</i></a></li>
-                                      </ul>
+                                      <div ng-hide="editorEnabled">
+                                        <span>{{item.label}}</span>
+                                        <ul class="actions">
+                                          <!-- <li><a href="#" title="Change Background Color"><i class="material-icons">format_color_fill</i></a></li>
+                                          <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label)"><i class="material-icons">clear</i></a></li> -->
+                                          <li><a href="#" ng-click="editorEnabled=!editorEnabled">E&nbsp;</a></li>
+                                          <li><a href="#" title="Change Background Color"><i class="material-icons">f</i></a></li>
+                                          <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label)"><i class="material-icons">x</i></a></li>
+                                        </ul>
+                                      </div>
+                                      <div ng-show="editorEnabled">
+                                        <input ng-model="item.label">
+                                        <a href="#" ng-click="editorEnabled=!editorEnabled">Done</a>
+                                      </div>
                                   </li>
                               </ul>
                             </div>
