--- a/dev/index.html
+++ b/dev/index.html
@@ -69,7 +69,7 @@
                                           <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label)"><i class="material-icons">clear</i></a></li> -->
                                           <li><a href="#" ng-click="editorEnabled=!editorEnabled">E&nbsp;</a></li>
                                           <li><a href="#" title="Change Background Color"><i class="material-icons">f</i></a></li>
-                                          <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label)"><i class="material-icons">x</i></a></li>
+                                          <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label, $index)"><i class="material-icons">x</i></a></li>
                                         </ul>
                                       </div>
                                       <div ng-show="editorEnabled">
