--- a/dev/index.html
+++ b/dev/index.html
@@ -48,7 +48,7 @@
                                       <a href="#" class="add-story" ng-click="$storage.lists[listName].push({label: 'Story #1'})" title="Add Story">Add Story</a>
                                     </li>
                                     <li>
-                                      <a href="#" class="" ng-click="" title="Clear Story">Clear Board</a>
+                                      <a href="#" class="" ng-click="clearBoard(listName)" title="Clear Story">Clear Board</a>
                                     </li>
                                   </ul>
                                 </div>
