--- a/dev/index.html
+++ b/dev/index.html
@@ -67,12 +67,23 @@
                                        transfer the object that was assigned to it. If an element was
                                        dragged away, you have to remove it from the original list
                                        yourself using the dnd-moved attribute -->
-                                  <li class="card" ng-repeat="item in list | filter: query" dnd-draggable="item" dnd-moved="list.splice($index, 1)" dnd-effect-allowed="move" dnd-selected="models.selected = item" ng-class="{'selected': models.selected === item}">
+                                  <li style="background-color:{{item.color}}" class="card" ng-repeat="item in list | filter: query" dnd-draggable="item" dnd-moved="list.splice($index, 1)" dnd-effect-allowed="move" dnd-selected="models.selected = item">
                                       <div ng-hide="editorEnabled">
                                         <span>{{item.label}}</span>
                                         <ul class="actions">
                                           <li><a href="#" ng-click="editorEnabled=!editorEnabled"><i class="material-icons">mode_edit</i></a></li>
-                                          <li><a href="#" ng-click="changeColor($index, listName)" title="Change Background Color"><i class="material-icons">format_color_fill</i></a></li>
+                                          <li>
+                                            <a href="#" ng-click="changeColor($index, listName)" title="Change Background Color"><i class="material-icons">format_color_fill</i></a>
+                                            <div class="colorpickbox">
+                                              <select ng-model="color[$index]" ng-change="updateBg(this, item)" name="colorpicker" id="">
+                                                <option value="white">White</option>
+                                                <option value="blue">Blue</option>
+                                                <option value="red">Red</option>
+                                                <option value="green">Green</option>
+                                                <option value="yellow">Yellow</option>
+                                              </select>
+                                            </div>
+                                          </li>
                                           <li><a href="#" title="Delete" ng-click="moveToTrash(listName, item.label, $index)"><i class="material-icons">clear</i></a></li>
                                         </ul>
                                       </div>
