change color feature

--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
                                           <li>
                                             <a href="#" ng-click="changeColor($index, listName)" title="Change Background Color"><i class="material-icons">format_color_fill</i></a>
                                             <div class="colorpickbox">
-                                              <select ng-model="color[$index]" ng-change="updateBg(this, item)" name="colorpicker" id="">
+                                              <select ng-model="item.color" name="colorpicker" id="">
                                                 <option value="white">White</option>
                                                 <option value="blue">Blue</option>
                                                 <option value="red">Red</option>
