icons for trash bin actions

--- a/src/index.html
+++ b/src/index.html
@@ -132,8 +132,8 @@
                 <li class="card" ng-repeat="item in items">
                     <span>{{item.label}}</span>
                     <ul class="actions">
-                      <li><a href="#" ng-click="putBack($index, item)">Put Back</a></li>
-                      <li><a href="#" ng-click="permanentlyDelete($index)">Permanently Delete</a></li>
+                      <li><a href="#" ng-click="putBack($index, item)"><i class="material-icons">replay</i></a></li>
+                      <li><a href="#" ng-click="permanentlyDelete($index)"><i class="material-icons">delete</i></a></li>
                     </ul>
                 </li>
             </ul>
