panel-primary actions styles

--- a/dev/index.html
+++ b/dev/index.html
@@ -48,7 +48,7 @@
                                 <h3 class="panel-title text-center">
                                   {{ listName == 'InProgress' ? 'In Progress' : listName}}
                                 </h3>
-                                <div class="actions">
+                                <div class="actions clearfix">
                                   <ul class="nav nav-justified">
                                     <li>
                                       <a href="#" class="add-story" ng-click="addItem(listName)" title="Add Story">Add Card</a>
