--- a/dev/index.html
+++ b/dev/index.html
@@ -35,14 +35,14 @@
 
       <div class="container-fluid">
         <div class="simpleDemo row">
-            <div class="col-xs-10">
+            <div class="col-xs-12 col-lg-10">
                 <div class="search-block clearfix">
                   <div class="pull-left">
                     <input class="form-control" type="text" ng-model="query" placeholder="Search Tickets">
                   </div>
                 </div>
                 <div class="row">
-                    <div ng-repeat="(listName, list) in models.lists" class="col-xs-4 col-sm-3">
+                    <div ng-repeat="(listName, list) in models.lists" class="col-xs-4 col-sm-4 col-md-3">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
                                 <h3 class="panel-title text-center">
@@ -107,7 +107,7 @@
         
             </div>
         
-            <div class="col-xs-2">
+            <div class="col-xs-12 col-lg-2">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h3 class="panel-title">Generated Model</h3>
