added help link

--- a/dev/index.html
+++ b/dev/index.html
@@ -21,13 +21,16 @@
 
   </head>
   <body ng-app="collabsApp">
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">
             <img src="assets/img/logo.svg" alt="">
           </a>
         </div>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Help</a></li>
+        </ul>
       </div>
     </nav>
 
