intro walkthrough should only appear once.

--- a/dev/index.html
+++ b/dev/index.html
@@ -29,7 +29,7 @@
           </a>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#" onclick="introJs().start()">Help</a></li>
+          <li><a href="#" onclick="introJs().start()" data-step="6" data-intro="Click here to play the walkthrough again">Help</a></li>
         </ul>
       </div>
     </nav>
