--- a/dev/index.html
+++ b/dev/index.html
@@ -44,7 +44,7 @@
                     <input class="form-control" type="text" ng-model="query" placeholder="Search Tickets" data-step="4" data-intro="Search cards across all the boards" data-position="right">
                   </div>
                 </div>
-                <div class="row" data-step="1" data-intro="This are the three main board">
+                <div class="row" data-step="1" data-intro="These are the three main board">
                     <div ng-repeat="(listName, list) in models.lists" class="col-xs-4 col-sm-4 col-md-3">
                         <div class="panel panel-primary">
                             <div class="panel-heading">
